--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú de Prácticas</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portal de Asignaciones - Jhonn Alan Meneses Veizaga</title>
+
+    <!-- Enlace al CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        <h1>Menú de Prácticas</h1>
-        <p>Selecciona una práctica para ir a su repositorio en GitHub</p>
+        <div class="perfil">
+            <img src="imagenes/profile.png" alt="Foto de Perfil">
+        </div>
+
+        <h1>Portal de Asignaciones</h1>
+        <p><strong>Jhonn Alan Meneses Veizaga</strong></p>
+        <p>UPDS - Cochabamba</p>
     </header>
 
     <div class="menu">
-        <a href="https://github.com/jhonnmv19/tecnologia_web" class="card" target="_blank">
+
+        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 1</h2>
-            <p>HTML básico</p>
+            <p>Servidor Web / HTML básico</p>
         </a>
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web" class="card" target="_blank">
+        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 2</h2>
-            <p>Estilos con CSS</p>
+            <p>Diseño con CSS</p>
         </a>
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web" class="card" target="_blank">
+        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 3</h2>
             <p>Maquetación Web</p>
         </a>
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web" class="card" target="_blank">
+        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 4</h2>
             <p>Formularios</p>
-   
         </a>
+
     </div>
 
 </body>
