--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="perfil">
-            <img src="imagenes/profile.png" alt="Foto de Perfil">
+            <img src="imagenes/perrito.png" alt="Foto de Perfil">
         </div>
 
         <h1>Portal de Asignaciones</h1>
@@ -22,10 +22,10 @@
 
     <div class="menu">
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
-            <h2>Práctica 1</h2>
-            <p>Servidor Web / HTML básico</p>
-        </a>
+       <a href="practica1/practica1_Tec_Web_I.pdf" class="card" target="_blank">
+    <h2>Práctica 1</h2>
+    <p>Servidor Web / HTML básico</p>
+</a>
 
         <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 2</h2>
