--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
        <a href="practica1/practica1_Tec_Web_I.pdf" class="card" target="_blank">
     <h2>Práctica 1</h2>
-    <p>Servidor Web / HTML básico</p>
+    <p>practica de github</p>
 </a>
 
         <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
