Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="menu">
 
-       <a href="practica1/practica1_Tec_Web_I.pdf" class="card" target="_blank">
+       <a href="practica1/practica1 Tec_Web_I - copia.pdf" class="card" target="_blank">
     <h2>Práctica 1</h2>
     <p>practica de github</p>
 </a>
