Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Portal de Asignaciones - Jhonn Alan Meneses Veizaga</title>
 
     <!-- Enlace al CSS -->
@@ -27,7 +31,7 @@
     <p>practica de github</p>
 </a>
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
+        <a href="practica2/practica2.html" class="card" target="_blank">
             <h2>Práctica 2</h2>
             <p>Diseño con CSS</p>
         </a>
