Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Portal de Asignaciones - Jhonn Alan Meneses Veizaga</title>
 
-    <!-- Enlace al CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -27,12 +26,12 @@
     <div class="menu">
 
        <a href="practica1/practica1_Tec_Web_I.pdf" class="card" target="_blank">
-    <h2>Práctica 1</h2>
+    <h2>Practica 1</h2>
     <p>practica de github</p>
 </a>
 
         <a href="practica2/practica2.html" class="card" target="_blank">
-            <h2>Práctica 2</h2>
+            <h2>Practica 2</h2>
             <p>Diseño con CSS</p>
         </a>
 
