Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <h2>Practica 2</h2>
             <p>Diseño con CSS</p>
         </a>
+  <a href="avences/avences de proyecto.docx" class="card" target="_blank">
+            <h2>Documento</h2>
+            <p>Anaces del Proyecto</p>
+        </a>
 
         <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 3</h2>
