Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
             <h2>Practica 2</h2>
             <p>Diseño con CSS</p>
         </a>
-  <a href="avences/avences de proyecto.docx" class="card" target="_blank">
-            <h2>Documento</h2>
-            <p>Anaces del Proyecto</p>
-        </a>
+ <div class="card">
+    <h2>Documento</h2>
+    <p>Estos son los avances de mi proyecto</p>
+
+    <a href="avences/avences_del_proyecto.pdf" class="btn-rojo" target="_blank">Ver PDF</a>
+    <a href="avences/avences de proyecto.docx" class="btn-azul" target="_blank">Ver Word</a>
+</div>
+
+
 
         <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 3</h2>
