--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <h2>Documento</h2>
     <p>Estos son los avances de mi proyecto</p>
 
-    <a href="avences/avences_del_proyecto.pdf" class="btn-rojo" target="_blank">Ver PDF</a>
-    <a href="avences/avences de proyecto.docx" class="btn-azul" target="_blank">Ver Word</a>
+    <a href="avences/avences_del_proyecto.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
+    <a href="avences/avences de proyecto.docx" class="btn-word" target="_blank">Ver Word</a>
 </div>
 
 
