Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </a>
  <div class="card">
     <h2>Documento</h2>
-    <p>Estos son los avances de mi proyecto</p>
+    <p>Estos son los avances de mi proyecto como en pdf y word</p>
 
     <a href="avences/avences_del_proyecto.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
     <a href="avences/avences de proyecto.docx" class="btn-word" target="_blank">Ver Word</a>
