--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
         <a href="practica2/practica2.html" class="card" target="_blank">
             <h2>Practica 2</h2>
+            <p>Ejercicio de javaScript</p>
+        </a>
+        <a href="foro2/foro2.html" class="card" target="_blank">
+            <h2>Practica de Labo</h2>
             <p>Diseño con CSS</p>
         </a>
  <div class="card">
