Actualización del index y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <h2>Documento</h2>
     <p>Estos son los avances de mi proyecto como en pdf y word</p>
 
-    <a href="avences/avences_del_proyecto.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
-    <a href="avences/avences de proyecto.docx" class="btn-word" target="_blank">Ver Word</a>
+    <a href="avences/avences_del_proyecto-15.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
+    <a href="avences/avences de proyecto-15.docx" class="btn-word" target="_blank">Ver Word</a>
 </div>
 
 
