--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="avences/avences_del_proyecto-15.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
     <a href="avences/avences de proyecto-15.docx" class="btn-word" target="_blank">Ver Word</a>
 </div>
-<a href="json/practica_json.html" class="card" target="_blank">
+<a href="practica_json/index.html" class="card" target="_blank">
     <h2>Práctica JSON</h2>
     <p>Trabajando con JSON</p>
 </a>
