--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
 
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
-            <h2>Práctica 3</h2>
-            <p>Maquetación Web</p>
-        </a>
+        <a href="practica3/indexP3.html" class="card" target="_blank">
+    <h2>Práctica 3: JSON</h2>
+    <p>Trabajando con JSON</p>
+</a>
+
 
         <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
             <h2>Práctica 4</h2>
