--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
     <p>Trabajando con JSON</p>
 </a>
 
+<a href="https://github.com/jhonnmv19/EvoSplash" class="card" target="_blank">
+    <h2>Código</h2>
+    <p>Ver el repositorio en GitHub</p>
+</a>
 
-        <a href="https://github.com/jhonnmv19/tecnologia_web_I" class="card" target="_blank">
-            <h2>Práctica 4</h2>
-            <p>Formularios</p>
-        </a>
+<a href="https://evo-splash.vercel.app/" class="card" target="_blank">
+    <h2>Deploy</h2>
+    <p>Visitar el sitio en Vercel</p>
+</a>
+
 
     </div>
 
