--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <h2>Documento</h2>
     <p>Estos son los avances de mi proyecto como en pdf y word</p>
 
-    <a href="avences/avences_del_proyecto-15.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
-    <a href="avences/avences de proyecto22.1.docx.docx" class="btn-word" target="_blank">Ver Word</a>
+    <a href="avences/Proyecto_Evo_Splash.pdf" class="btn-pdf" target="_blank">Ver PDF</a>
+    <a href="avences/Proyecto_Evo_Splash.docx" class="btn-word" target="_blank">Ver Word</a>
 </div>
 <a href="practica_json/index.html" class="card" target="_blank">
     <h2>Práctica JSON</h2>
